--- a/Services/API/API.csproj
+++ b/Services/API/API.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\..\Shared\Entities\Entities.csproj" />
   </ItemGroup>
 
 </Project>
