--- a/Presentation/WebMVC/WebMVC.csproj
+++ b/Presentation/WebMVC/WebMVC.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entities\Entities.csproj" />
-    <ProjectReference Include="..\Process\Process.csproj" />
+    <ProjectReference Include="..\..\Process\Process.csproj" />
+    <ProjectReference Include="..\..\Shared\Entities\Entities.csproj" />
   </ItemGroup>
 
 </Project>
