--- a/Services/API/API.csproj
+++ b/Services/API/API.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Business\Business\Business.csproj" />
     <ProjectReference Include="..\..\Shared\Entities\Entities.csproj" />
   </ItemGroup>
 
