Calling a basket of world bank API, return aggregated data

--- a/Business/Business/Business.csproj
+++ b/Business/Business/Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Data.csproj" />
+    <ProjectReference Include="..\..\Shared\Entities\Entities.csproj" />
   </ItemGroup>
 
 </Project>
