--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,39 +1,18 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
-- master
+- master  # Or your branch
 
-resources:
-- repo: self
+pool:
+  vmImage: 'ubuntu-latest'
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '23866836-6324-4d76-b67a-556fbc4f4c9a'
-  imageRepository: 'container'
-  containerRegistry: 'paynetproject.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Services/API/Dockerfile'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+steps:
+- task: swellaby.mirror-git-repository.mirror-git-repository-vsts-task.mirror-git-repository-vsts-task@1
+  displayName: 'Mirror Git Repository'
+  inputs:
+    sourceGitRepositoryUri: 'https://dev.azure.com/clementmaxwell/PayNetMiniProject/_git/API'
+    sourceGitRepositoryPersonalAccessToken: '$(sourcePAT)'
+    destinationGitRepositoryUri: 'https://github.com/nalhassanal/APIDest.git'
+    destinationGitRepositoryPersonalAccessToken: '$(destPAT)'
+    # Optional:
+    # sourceGitRepositoryCloneDirectoryName: ''
+    # sourceVerifySSLCertificate: true
+    # destinationVerifySSLCertificate: true
