--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,11 @@
+variables:
+- group: mirror
+
 trigger:
-- master  # Or your branch
+- master
 
 pool:
-  name: 'default'  # Or your self-hosted agent pool
+  name: 'SelfHostedAgents'  # or 'ubuntu-latest' for Microsoft-hosted
 
 steps:
 - task: swellaby.mirror-git-repository.mirror-git-repository-vsts-task.mirror-git-repository-vsts-task@1
