--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
 - master
 
 pool:
-  name: 'SelfHostedAgents'  # or 'ubuntu-latest' for Microsoft-hosted
+  name: 'default'  # or 'ubuntu-latest' for Microsoft-hosted
 
 steps:
 - task: swellaby.mirror-git-repository.mirror-git-repository-vsts-task.mirror-git-repository-vsts-task@1
