--- a/Services/API/Dockerfile.original
+++ b/Services/API/Dockerfile.original
@@ -12,13 +12,11 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/API/API.csproj", "Services/API/"]
-COPY ["Business/Business/Business.csproj", "Business/Business/"]
-COPY ["Data/Data.csproj", "Data/"]
-COPY ["Shared/Entities/Entities.csproj", "Shared/Entities/"]
-RUN dotnet restore "./Services/API/API.csproj"
+COPY ["API/API.csproj", "API/"]
+COPY ["Entities/Entities.csproj", "Entities/"]
+RUN dotnet restore "./API/API.csproj"
 COPY . .
-WORKDIR "/src/Services/API"
+WORKDIR "/src/API"
 RUN dotnet build "./API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
