--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -6,7 +6,7 @@ resources:
   repositories:
   - repository: self
 variables:
-  azureSubscriptionEndpoint: 'AzureRMConnection'  # Updated to your ARM service connection name
+  azureSubscriptionEndpoint: 'AzureRMConnection'
   imageRepository: 'api'
   containerRegistry: 'paynetproject.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Services/API/Dockerfile'
@@ -18,16 +18,19 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: 'Default'  # Use your self-hosted agent in the default pool
+      name: 'Default'
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
-        containerRegistry: 'paynetproject'
-        repository: '$(imageRepository)'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
+        containerRegistryType: 'Azure Container Registry'
+        azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+        azureContainerRegistry: $(containerRegistry)
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        tags: |
+          $(tag)
     - task: CopyFiles@2
       displayName: 'Copy ARM template'
       inputs:
