--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -6,12 +6,11 @@ resources:
   repositories:
   - repository: self
 variables:
-  dockerRegistryServiceConnection: 'ad4da258-78a8-4f4c-be50-7f42a2ab23f4'
+  azureSubscriptionEndpoint: 'AzureRMConnection'
   imageRepository: 'webmvc'
   containerRegistry: 'paynetproject.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile (2)'
   tag: '$(Build.BuildId)'
-  vmImageName: 'ubuntu-latest'
   system.debug: true
 stages:
 - stage: Build
@@ -20,15 +19,16 @@ stages:
   - job: Build
     displayName: Build WebMVC
     pool:
-      vmImage: $(vmImageName)
+      name: 'Default'  # Use self-hosted azure-host agent
     steps:
     - script: ls -R $(Build.SourcesDirectory)
       displayName: 'List files in build context'
     - task: Docker@2
       displayName: Build and push WebMVC image to container registry
       inputs:
-        containerRegistryType: 'Container Registry'
-        dockerRegistryServiceConnection: $(dockerRegistryServiceConnection)
+        containerRegistryType: 'Azure Container Registry'
+        azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+        azureContainerRegistry: $(containerRegistry)
         command: buildAndPush
         repository: $(containerRegistry)/$(imageRepository)
         dockerfile: $(dockerfilePath)
