Update azure-pipelines-4.yml for Azure Pipelines

--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -2,7 +2,7 @@ trigger:
   - main
 
 pool:
-  vmImage: 'ubuntu-latest' # Default Azure-hosted VM image
+  name: 'Default' # Default Azure-hosted VM image
 
 steps:
   - task: NodeTool@0
